// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render default (success) Alert 1`] = `
.c4 {
  vertical-align: middle;
  color: #2AAB3F;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  grid-gap: 1rem;
  display: grid;
}

.c3 {
  grid-area: icon;
}

.c5 {
  grid-area: messages;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
  -webkit-animation: eMLfYp .5s ease-in-out;
  animation: eMLfYp .5s ease-in-out;
  background-color: #FFFFFF;
  grid-gap: 0.75rem;
  max-width: 28.5rem;
  padding: 0.75rem;
  position: fixed;
  right: 1rem;
  top: 1rem;
  z-index: 1030;
  grid-template-areas: 'icon messages';
  grid-template-columns: 1.5rem 1fr;
  border-left: 0.25rem solid #2AAB3F;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
  color: #313440;
  vertical-align: middle;
}

.c6:last-child {
  margin-bottom: 0;
}

<div
  class="c0 c1 c2"
  role="alert"
  type="success"
>
  <div
    class="c0 c3"
  >
    <svg
      class="c4"
      color="success"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.996.996 0 111.41-1.41L10 14.17l6.88-6.88a.996.996 0 111.41 1.41l-7.59 7.59a.996.996 0 01-1.41 0z"
      />
    </svg>
  </div>
  <div
    class="c0 c5"
  >
    <div
      class="c0"
    >
      <span
        class="c6"
      >
        Success
      </span>
       
    </div>
  </div>
</div>
`;

exports[`render error Alert 1`] = `
.c4 {
  vertical-align: middle;
  color: #DB3643;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  grid-gap: 1rem;
  display: grid;
}

.c3 {
  grid-area: icon;
}

.c5 {
  grid-area: messages;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
  -webkit-animation: eMLfYp .5s ease-in-out;
  animation: eMLfYp .5s ease-in-out;
  background-color: #FFFFFF;
  grid-gap: 0.75rem;
  max-width: 28.5rem;
  padding: 0.75rem;
  position: fixed;
  right: 1rem;
  top: 1rem;
  z-index: 1030;
  grid-template-areas: 'icon messages';
  grid-template-columns: 1.5rem 1fr;
  border-left: 0.25rem solid #DB3643;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
  color: #313440;
  vertical-align: middle;
}

.c6:last-child {
  margin-bottom: 0;
}

<div
  class="c0 c1 c2"
  role="alert"
  type="error"
>
  <div
    class="c0 c3"
  >
    <svg
      class="c4"
      color="danger"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 11c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
      />
    </svg>
  </div>
  <div
    class="c0 c5"
  >
    <div
      class="c0"
    >
      <span
        class="c6"
      >
        Error
      </span>
       
    </div>
  </div>
</div>
`;

exports[`render info Alert 1`] = `
.c4 {
  vertical-align: middle;
  color: #0B38D9;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  grid-gap: 1rem;
  display: grid;
}

.c3 {
  grid-area: icon;
}

.c5 {
  grid-area: messages;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
  -webkit-animation: eMLfYp .5s ease-in-out;
  animation: eMLfYp .5s ease-in-out;
  background-color: #FFFFFF;
  grid-gap: 0.75rem;
  max-width: 28.5rem;
  padding: 0.75rem;
  position: fixed;
  right: 1rem;
  top: 1rem;
  z-index: 1030;
  grid-template-areas: 'icon messages';
  grid-template-columns: 1.5rem 1fr;
  border-left: 0.25rem solid #0B38D9;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
  color: #313440;
  vertical-align: middle;
}

.c6:last-child {
  margin-bottom: 0;
}

<div
  class="c0 c1 c2"
  role="alert"
  type="info"
>
  <div
    class="c0 c3"
  >
    <svg
      class="c4"
      color="primary60"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"
      />
    </svg>
  </div>
  <div
    class="c0 c5"
  >
    <div
      class="c0"
    >
      <span
        class="c6"
      >
        Info
      </span>
       
    </div>
  </div>
</div>
`;

exports[`render warning Alert 1`] = `
.c4 {
  vertical-align: middle;
  color: #FFAE00;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  grid-gap: 1rem;
  display: grid;
}

.c3 {
  grid-area: icon;
}

.c5 {
  grid-area: messages;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
  -webkit-animation: eMLfYp .5s ease-in-out;
  animation: eMLfYp .5s ease-in-out;
  background-color: #FFFFFF;
  grid-gap: 0.75rem;
  max-width: 28.5rem;
  padding: 0.75rem;
  position: fixed;
  right: 1rem;
  top: 1rem;
  z-index: 1030;
  grid-template-areas: 'icon messages';
  grid-template-columns: 1.5rem 1fr;
  border-left: 0.25rem solid #FFAE00;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
  color: #313440;
  vertical-align: middle;
}

.c6:last-child {
  margin-bottom: 0;
}

<div
  class="c0 c1 c2"
  role="alert"
  type="warning"
>
  <div
    class="c0 c3"
  >
    <svg
      class="c4"
      color="warning50"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M4.47 21h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0L2.74 18c-.77 1.33.19 3 1.73 3zM12 14c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1s1 .45 1 1v2c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
      />
    </svg>
  </div>
  <div
    class="c0 c5"
  >
    <div
      class="c0"
    >
      <span
        class="c6"
      >
        Warning
      </span>
       
    </div>
  </div>
</div>
`;

exports[`renders close button 1`] = `
.c4 {
  vertical-align: middle;
  color: #2AAB3F;
  height: 1.5rem;
  width: 1.5rem;
}

.c10 {
  vertical-align: middle;
  height: 1.25rem;
  width: 1.25rem;
}

.c0 {
  box-sizing: border-box;
}

.c7 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7 + .bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #0B38D9;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #2852EB;
}

.c7[disabled] {
  background-color: #D9DCE9;
}

.c9 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c8 {
  background-color: transparent;
  border: none;
  color: #313440;
  height: auto;
  padding: 0;
}

.c8:active {
  background-color: #DBE3FE;
}

.c8:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c8:hover:not(:active) {
  background-color: #F0F3FF;
}

.c8[disabled] {
  color: #D9DCE9;
}

.c1 {
  grid-gap: 1rem;
  display: grid;
}

.c3 {
  grid-area: icon;
}

.c5 {
  grid-area: messages;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
  -webkit-animation: eMLfYp .5s ease-in-out;
  animation: eMLfYp .5s ease-in-out;
  background-color: #FFFFFF;
  grid-gap: 0.75rem;
  max-width: 28.5rem;
  padding: 0.75rem;
  position: fixed;
  right: 1rem;
  top: 1rem;
  z-index: 1030;
  grid-template-areas: 'icon messages close';
  grid-template-columns: 1.5rem 1fr 1.25rem;
  border-left: 0.25rem solid #2AAB3F;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
  color: #313440;
  vertical-align: middle;
}

.c6:last-child {
  margin-bottom: 0;
}

@media (min-width:720px) {
  .c7 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c7 {
    width: auto;
  }
}

<div
  class="c0 c1 c2"
  role="alert"
  type="success"
>
  <div
    class="c0 c3"
  >
    <svg
      class="c4"
      color="success"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.996.996 0 111.41-1.41L10 14.17l6.88-6.88a.996.996 0 111.41 1.41l-7.59 7.59a.996.996 0 01-1.41 0z"
      />
    </svg>
  </div>
  <div
    class="c0 c5"
  >
    <div
      class="c0"
    >
      <span
        class="c6"
      >
        Success
      </span>
       
    </div>
  </div>
  <div
    class="c0 "
  >
    <button
      class="c7 c8"
    >
      <span
        class="c9"
      >
        <svg
          class="c10"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18.3 5.71a.996.996 0 00-1.41 0L12 10.59 7.11 5.7A.996.996 0 105.7 7.11L10.59 12 5.7 16.89a.996.996 0 101.41 1.41L12 13.41l4.89 4.89a.996.996 0 101.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders header 1`] = `
.c4 {
  vertical-align: middle;
  color: #2AAB3F;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  grid-gap: 1rem;
  display: grid;
}

.c3 {
  grid-area: icon;
}

.c5 {
  grid-area: messages;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
  -webkit-animation: eMLfYp .5s ease-in-out;
  animation: eMLfYp .5s ease-in-out;
  background-color: #FFFFFF;
  grid-gap: 0.75rem;
  max-width: 28.5rem;
  padding: 0.75rem;
  position: fixed;
  right: 1rem;
  top: 1rem;
  z-index: 1030;
  grid-template-areas: 'icon messages';
  grid-template-columns: 1.5rem 1fr;
  border-left: 0.25rem solid #2AAB3F;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5rem;
  margin: 0 0 0.5rem;
  line-height: 1rem;
  margin-bottom: 0.25rem;
}

.c7 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
  color: #313440;
  vertical-align: middle;
}

.c7:last-child {
  margin-bottom: 0;
}

<div
  class="c0 c1 c2"
  role="alert"
  type="success"
>
  <div
    class="c0 c3"
  >
    <svg
      class="c4"
      color="success"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.996.996 0 111.41-1.41L10 14.17l6.88-6.88a.996.996 0 111.41 1.41l-7.59 7.59a.996.996 0 01-1.41 0z"
      />
    </svg>
  </div>
  <div
    class="c0 c5"
  >
    <h4
      class="c6"
    >
      Header
    </h4>
    <div
      class="c0"
    >
      <span
        class="c7"
      >
        Success
      </span>
       
    </div>
  </div>
</div>
`;

exports[`renders with external link 1`] = `
.c4 {
  vertical-align: middle;
  color: #2AAB3F;
  height: 1.5rem;
  width: 1.5rem;
}

.c9 {
  vertical-align: middle;
  height: 1rem;
  width: 1rem;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  grid-gap: 1rem;
  display: grid;
}

.c3 {
  grid-area: icon;
}

.c5 {
  grid-area: messages;
}

.c7 {
  -webkit-transition: all 70ms ease-out;
  transition: all 70ms ease-out;
  -webkit-transition-property: color;
  transition-property: color;
  color: #3C64F4;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 400;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7:active {
  color: #0024A6;
}

.c7:hover:not(:active) {
  color: #0024A6;
}

.c7 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 0.25rem;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
  -webkit-animation: eMLfYp .5s ease-in-out;
  animation: eMLfYp .5s ease-in-out;
  background-color: #FFFFFF;
  grid-gap: 0.75rem;
  max-width: 28.5rem;
  padding: 0.75rem;
  position: fixed;
  right: 1rem;
  top: 1rem;
  z-index: 1030;
  grid-template-areas: 'icon messages';
  grid-template-columns: 1.5rem 1fr;
  border-left: 0.25rem solid #2AAB3F;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
  color: #313440;
  vertical-align: middle;
}

.c6:last-child {
  margin-bottom: 0;
}

.c8 {
  font-size: 0.875rem;
  vertical-align: middle;
}

<div
  class="c0 c1 c2"
  role="alert"
  type="success"
>
  <div
    class="c0 c3"
  >
    <svg
      class="c4"
      color="success"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.996.996 0 111.41-1.41L10 14.17l6.88-6.88a.996.996 0 111.41 1.41l-7.59 7.59a.996.996 0 01-1.41 0z"
      />
    </svg>
  </div>
  <div
    class="c0 c5"
  >
    <div
      class="c0"
    >
      <span
        class="c6"
      >
        Success
      </span>
       
      <a
        class="c7 c8"
        href="#"
        target="_blank"
      >
        <span>
          Link
        </span>
        <svg
          class="c9"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5a2 2 0 00-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13a.996.996 0 101.41 1.41L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`renders with link 1`] = `
.c4 {
  vertical-align: middle;
  color: #2AAB3F;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  grid-gap: 1rem;
  display: grid;
}

.c3 {
  grid-area: icon;
}

.c5 {
  grid-area: messages;
}

.c7 {
  -webkit-transition: all 70ms ease-out;
  transition: all 70ms ease-out;
  -webkit-transition-property: color;
  transition-property: color;
  color: #3C64F4;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 400;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:active {
  color: #0024A6;
}

.c7:hover:not(:active) {
  color: #0024A6;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
  -webkit-animation: eMLfYp .5s ease-in-out;
  animation: eMLfYp .5s ease-in-out;
  background-color: #FFFFFF;
  grid-gap: 0.75rem;
  max-width: 28.5rem;
  padding: 0.75rem;
  position: fixed;
  right: 1rem;
  top: 1rem;
  z-index: 1030;
  grid-template-areas: 'icon messages';
  grid-template-columns: 1.5rem 1fr;
  border-left: 0.25rem solid #2AAB3F;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
  color: #313440;
  vertical-align: middle;
}

.c6:last-child {
  margin-bottom: 0;
}

.c8 {
  font-size: 0.875rem;
  vertical-align: middle;
}

<div
  class="c0 c1 c2"
  role="alert"
  type="success"
>
  <div
    class="c0 c3"
  >
    <svg
      class="c4"
      color="success"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.996.996 0 111.41-1.41L10 14.17l6.88-6.88a.996.996 0 111.41 1.41l-7.59 7.59a.996.996 0 01-1.41 0z"
      />
    </svg>
  </div>
  <div
    class="c0 c5"
  >
    <div
      class="c0"
    >
      <span
        class="c6"
      >
        Success
      </span>
       
      <a
        class="c7 c8"
        href="#"
      >
        Link
      </a>
    </div>
  </div>
</div>
`;
